sumo/tests/sumo/output/e2/errors/length_missing/errors.sumo
Error: Attribute 'length' is missing in definition of e2-detector '4/1to3/1'.
Quitting (on error).
